# nba_elt_ingestion

./: .bumpversion.cfg  .coveragerc  .dockerignore  .flake8  .gitignore  .opencode.json  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  Pipfile  README.md  VERSION  app.py  install_packages.sh  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties  utils.py
.agents/skills/add-missing-odds-data/: SKILL.md
.github/: labeler.yml  pull_request_template.md
.github/workflows/: auto_labeler.yml  ci_cd.yml  deploy.yml  github-actions-demo.yml  prod_deploy.yml  prod_test.yml  test.yml
docker/: Dockerfile  Dockerfile.test  docker-compose-postgres.yml  docker-compose-test.yml  postgres_bootstrap.sql
great_expectations/: great_expectations.yml
great_expectations/expectations/: .ge_store_backend_id
great_expectations/expectations/nba_source/aws_stats_table/: warning.json
scripts/: backfill.py  pre-commit-ty.sh
src/: app.py  aws.py  database.py  decorators.py  feature_flags.py  schema.py  scrapers.py  tester.py  utils.py
tests/: aws_test.py  conftest.py  schema.py  scrape_test.py  sql_test.py  unit_test.py
tests/fixture_csvs/: .~lock.odds_data.csv#  advanced_stats_data.csv  boxscores_data.csv  contracts.csv  injuries_data.csv  nba_tweets.csv  odds_data.csv  pbp_data.csv  raw_injury_stats.csv  reddit_comments_data.csv  shooting_stats_data.csv  stats_html.html  transactions_data.csv  transactions_html.html
tests/fixtures/: boxscores_data.csv  boxscores_html.html  boxscores_pbp_html.pickle  injuries_dump.pickle  mock_schedule_fixed_date.json  odds_data.pickle  odds_data.pkl  opp_stats.pickle  opp_stats_data.csv  pbp_data.csv  pbp_data.pickle  player_adv_stats.pickle  player_contracts.html  player_contracts_raw.pickle  player_stats_data.csv  postgres_players_fixture.csv  raw_adv_stats.csv  raw_opp_stats.csv  reddit_comments_data.csv  schedule.html  schedule_upsert_data.csv  scrape_odds.pickle  scrape_odds.pkl  shooting_stats.pickle  shooting_stats.pkl  stats_html.html  transactions.html  tweepy_tweets.csv
tests/integration/: adv_stats_test.py  aws_s3_test.py  aws_ses_test.py  boxscores_test.py  check_schedule_test.py  feature_flags_test.py  game_odds_test.py  get_feature_flags_test.py  injuries_test.py  league_schedule_test.py  league_transactions_test.py  odds_test.py  opp_stats.py  opp_stats_test.py  pbp_test.py  player_adv_stats_test.py  player_boxscores_test.py  player_contracts_test.py  player_injuries_test.py  player_pbp_test.py  player_shooting_stats_test.py  player_stats_test.py  postgres_test.py  reddit_comments_test.py  schedule_test.py  shooting_stats_test.py  stats_test.py  team_adv_stats_test.py  team_opp_stats_test.py  transactions_test.py  twitter_test.py  write_to_sql_upsert_test.py
tests/unit/: aws_test.py  check_feature_flag_decorator_test.py  clean_odds_spread_test.py  clean_player_names_test.py  database_test.py  feature_flags_test.py  filter_spread_test.py  generate_schedule_pull_type_test.py  get_leading_zeroes_test.py  get_season_type_test.py  old_df_test.py  query_logs_test.py  record_function_time_decorator_test.py  sentiment_analysis_test.py  time_function_test.py  unit_test.py  utils_write_to_sql_test.py  write_to_slack_test.py
tests/unit/scrapers/: game_odds_scraper_test.py  league_schedule_scraper_test.py  league_transactions_scraper_test.py  player_boxscores_scraper_test.py  player_contracts_scraper_test.py  player_injuries_scraper_test.py  player_pbp_scraper_test.py  player_shooting_stats_scraper_test.py  player_stats_scraper_test.py  reddit_comments_scraper_test.py  scraper_error_handlers_test.py  select_book_column_test.py  team_adv_stats_scraper_test.py  team_opp_stats_scraper_test.py
tests/utils/: db_assertions.py
