[tool.poetry]
name = "python-docker"
version = "1.12.1"
description = "Ingestion Script for NBA ELT Project"
authors = ["jyablonski9 <jyablonski9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.25.2"
pandas = "2.0.3"
boto3 = "^1.28.57"
praw = "^7.7.1"
html5lib = "^1.1"
lxml = "^4.9.3"
nltk = "^3.8.1"
psycopg2-binary = "^2.9.8"
requests = "^2.31.0"
sqlalchemy = "^2.0.21"
sentry-sdk = "^1.31.0"
awswrangler = "^3.4.0"
beautifulsoup4 = "^4.12.2"
tweepy = "^4.14.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
coveralls = "^3.3.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
ipykernel = "^6.25.2"
moto = "^4.2.4"
ruff = "^0.0.292"

[tool.pytest.ini_options]
filterwarnings =[
    "ignore::DeprecationWarning",
]
testpaths = ["tests"]
markers = [
    "wip: work in progress",
    "infrastructure: mocks for dummy data (sql db, http endpoint etc)",
]
addopts = "-v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"