[project]
name = "nba-elt-ingestion"
version = "2.0.3"
description = "Ingestion Script for NBA ELT Project"
authors = [{ name = "jyablonski9", email = "jyablonski9@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "numpy>=1.25.2,<2",
    "pandas>=2.2.3,<3",
    "boto3>=1.36.2,<2",
    "praw>=7.7.1,<8",
    "html5lib~=1.1",
    "lxml>=4.9.3,<5",
    "nltk>=3.8.1,<4",
    "psycopg2-binary>=2.9.8,<3",
    "requests>=2.32.0,<3",
    "sqlalchemy>=2.0.37,<3",
    "awswrangler>=3.11.0,<4",
    "beautifulsoup4>=4.12.2,<5",
    "jyablonski-common-modules>=0.0.7,<0.0.8",
]

[dependency-groups]
dev = [
    "black>=23.12.1,<24",
    "coveralls>=3.3.1,<4",
    "pytest>=7.4.2,<8",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.11.1,<4",
    "ipykernel>=6.25.2,<7",
    "moto>=4.2.4,<5",
    "ruff>=0.0.292,<0.0.293",
    "mypy>=1.7.1,<2",
    "boto3-stubs>=1.29.6,<2",
    "types-beautifulsoup4>=4.12.0.7,<5",
    "click>=8.1.8,<9",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings =[
    "ignore::DeprecationWarning",
]
testpaths = ["tests"]
markers = [
    "wip: work in progress",
    "infrastructure: mocks for dummy data (sql db, http endpoint etc)",
]
addopts = "-v"
